# aerial_pips

./: CMakeLists.txt  README.md  package.xml
scripts/: analyze_results.py  manual_run.py  run_all_experiments.py
